Fix: Make image responsive and prevent overflow
The image on the left now resizes properly when the page height shrinks.
It now zooms in while maintaining the width of it's parent container
instead of just shrinking down while maintaining it's aspect ratio.

A footer was also added to the image to give credit to the photographer.

--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,53 @@
-html {
-    line-height: 1.5;
-}
-
 body {
     display: flex;
     flex-direction: row;
-    height: 100%;
     margin: 0;
     padding: 0;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    object-fit: cover;
-}
-
-.image-container {
-    display: flex;
-    flex: 0 0 36%;
     width: 100%;
-    height: 100vh;
+    height: auto;
+    object-fit: cover;
+    object-position: center;
 }
 
-.sign-up-container {
+.image-column {
+    position: relative;
+    display: flex;
+    flex-basis: max(36vw, 270px);
+    height: 100vh;
+    overflow: hidden;
+}
+
+.image-footer {
+    position: absolute;
+    bottom: 1vh;
+    text-align: center;
+    left: 0;
+    right: 0;
+    margin: auto;
+    color: white;
+    font-size: 1em;
+}
+
+.sign-up-column {
     display: flex;
     flex: 1;
     height: 100vh;
     max-width: 75ch;
     flex-direction: column;
-    justify-content: space-evenly;
-    margin: 5vh;
+    justify-content: flex-start;
+    padding: 0 5vw;
     gap: 10vh;
+}
+
+.form-header,
+.form-main,
+.form-footer {
+    text-align: left;
+}
+
+a {
+    color: inherit;
 }
